[package]
name = "aisil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "0.10.0", optional = true }
indexmap = { version = "1.9.2", optional = true }
reqwest = { version = "0.11.14", features = ["json"], optional = true }
schemars = { version = "0.8.12", optional = true }
serde = { version = "1.0.152", optional = true }
serde_yaml = { version = "0.9.19", optional = true }
ts-rs = { version = "7.0.0", optional = true }

[dev-dependencies]
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0.152"
schemars = "0.8.12"
ts-rs = "7.0.0"

[features]
all = ["axum", "openapi", "reqwest", "openapi-yaml", "ts"]
axum = []
openapi = ["dep:aide", "dep:indexmap", "dep:schemars"]
openapi-yaml = ["openapi", "dep:serde_yaml"]
reqwest = ["dep:reqwest", "dep:serde"]
ts = ["dep:ts-rs"]
