[package]
name = "aisil"
description = "A lightweight framework to define APIs as types"
version = "0.1.0"
edition = "2024"

[dependencies]
aide = { version = "0.15.1", optional = true }
axum = { version = "0.8", optional = true }
documented = "0.9.2"
indexmap = { version = "2.6.0", optional = true }
paste = "1.0.15"
reqwest = { version = "0.11.14", features = ["json"], optional = true }
schemars = { version = "0.9", optional = true } # TODO: update to 1.0 after aide release
serde = { version = "1.0.152", optional = true, features = ["derive"] }
serde_yaml = { version = "0.9.19", optional = true }
tokio = { version = "1.33.0", features = ["rt"], optional = true }
tracing = { version = "0.1.41", optional = true }
trait-set = "0.3.0"
ts-rs = { version = "7.0.0", optional = true }

[dev-dependencies]
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "sync"] }
serde = "1.0.152"
schemars = "0.9"
ts-rs = "7.0.0"

[features]
axum = ["dep:axum", "serde"]
openapi = ["dep:aide", "dep:indexmap", "dep:schemars"]
openapi-yaml = ["openapi", "dep:serde_yaml"]
reqwest = ["dep:reqwest", "serde"]
serde = ["dep:serde"]
ts = ["dep:ts-rs"]
tokio = ["dep:tokio"]
tracing = ["dep:tracing"]
