[package]
name = "aisil"
description = "A lightweight framework to define APIs as types"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/sirewix/aisil"
documentation = "https://docs.rs/aisil/latest"
license = "MIT"
authors = ["Vlad Zagvozdkin <sirewix@gmail.com>"]
categories = ["asynchronous"]
keywords = ["async", "api", "service"]

[dependencies]
aide = { version = "0.16.0-alpha.1", optional = true } # FIXME
axum = { version = "0.8", features = ["json"], optional = true }
documented = "0.9.2"
indexmap = { version = "2.6.0", optional = true }
paste = "1.0.15"
reqwest = { version = "0.11.14", features = ["json"], optional = true }
schemars = { version = "1.1", optional = true }
serde = { version = "1.0.152", optional = true, features = ["derive"] }
serde_json = { version = "1.0.145", optional = true, features = ["raw_value"] }
serde_yaml = { version = "0.9.19", optional = true }
tokio = { version = "1.33.0", features = ["rt"], optional = true }
tracing = { version = "0.1.41", optional = true }
ts-rs = { version = "7.0.0", optional = true }

[dev-dependencies]
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "sync"] }
serde = "1.0.152"
schemars = "1.1"
ts-rs = "7.0.0"

[features]
post-json-axum = ["dep:axum", "dep:serde"]
post-json-openapi = ["dep:aide", "dep:indexmap", "dep:schemars"]
post-json-openapi-yaml = ["post-json-openapi", "dep:serde_yaml"]

json-rpc-server = ["dep:serde_json"]
json-rpc-openrpc = ["dep:serde_json", "dep:schemars"]
json-rpc-openrpc-yaml = ["json-rpc-openrpc", "dep:serde_yaml"]

client = ["dep:reqwest", "dep:serde"]
tokio = ["dep:tokio"]
tracing = ["dep:tracing"]
ts = ["dep:ts-rs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(docs)'] }
